# openhedgefund.ai

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_openhedgefund_ai.py
